--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 # Basic Information 
-title: Luyao Tang (唐路垚)
+title: Luyao Tang
+(唐路垚)
 position: MS. Student
 affiliation: XMU
 email: lytang (at) stu.xmu.edu.cn
@@ -14,7 +15,7 @@ canonical: https://lytang.github.io/
 # If you don't need one of them, you may delete the corresponding line.
 google_scholar: https://scholar.google.com/citations?user=kKaYkMcAAAAJ
 # cv_link: assets/files/curriculum_vitae.pdf
-github_link: https://github.com/
+github_link: https://github.com/lytang63
 # linkedin: https://www.linkedin.com/
 # twitter: https://twitter.com/
 
