--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,5 @@
 # Basic Information 
-title: Luyao Tang
-(唐路垚)
+title: Luyao Tang  唐路垚
 position: M. Student
 affiliation: XMU
 email: lytang (at) stu.xmu.edu.cn
