--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Luyao Tang  唐路垚
 position: M. Student
 affiliation: XMU
-email: lytang (at) stu.xmu.edu.cn
+email: lytang@stu.xmu.edu.cn
 
 # Search Engine Optimization (SEO)
 # The following information is used to improve the website traffic from search engines, e.g., Google.
