--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,5 +1,15 @@
 main:
 
+  - title: "CODA: Generalizing to Open and Unseen Domains with Compaction and Disambiguation"
+    authors: Chaoqi Chen*, <strong>Luyao Tang*</strong>, Yue Huang, Xiaoguang Han, Yizhou Yu
+    conference_short: NeurIPS
+    conference: Advances in Neural Information Processing Systems <strong>(NeurIPS)</strong>, 2023.
+    pdf: https://openreview.net/pdf?id=Jw0KRTjsGA
+    # code: https://github.com/MrGiovanni/ContinualLearning
+    # bibtex: https://bib.yliu.me/MICCAI23.txt
+    image: ./assets/img/NIPS23_1.png
+    notes: Spotlight
+    
   - title: "Activate and Reject: Towards Safe Domain Generalization under Category Shift"
     authors: Chaoqi Chen*, <strong>Luyao Tang*</strong>, Leitian Tao, Hong-Yu Zhou, Yue Huang, Xiaoguang Han, Yizhou Yu (*contributed equally)
     conference_short: ICCV
