--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,7 +1,7 @@
 main:
 
   - title: "CODA: Generalizing to Open and Unseen Domains with Compaction and Disambiguation"
-    authors: Chaoqi Chen*, <strong>Luyao Tang*</strong>, Yue Huang, Xiaoguang Han, Yizhou Yu
+    authors: Chaoqi Chen*, <strong>Luyao Tang*</strong>, Yue Huang, Xiaoguang Han, Yizhou Yu (*contributed equally)
     conference_short: NeurIPS
     conference: Advances in Neural Information Processing Systems <strong>(NeurIPS)</strong>, 2023.
     pdf: https://openreview.net/pdf?id=Jw0KRTjsGA
