--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,4 +1,22 @@
 main:
+  - title: "OCRT: Boosting Foundation Models in the Open World with Object-Concept-Relation Triad"
+    authors: <strong>Luyao Tang*</strong>, Yuxuan Yuan*, Chaoqi Chen, Zeyu Zhang, Yue Huang, Kun Zhang
+    conference_short: CVPR
+    conference:  IEEE/CVF Conference on Computer Vision and Pattern Recognition <strong>(CVPR)</strong>, 2025.
+    pdf: https://arxiv.org/pdf/2503.18695
+    # code: https://github.com/lytang63/SlotSAM
+    # bibtex: https://bib.yliu.me/MICCAI23.txt
+    image: ./assets/img/CVPR25_1.png
+    
+  - title: "Reconstruct and Match: Out-of-Distribution Robustness via Topological Homogeneity"
+    authors: Chaoqi Chen, <strong>Luyao Tang</strong>, Hui Huang
+    conference_short: NeurIPS
+    conference: Advances in Neural Information Processing Systems <strong>(NeurIPS)</strong>, 2024.
+    pdf: https://proceedings.neurips.cc/paper_files/paper/2024/file/e34d214dfb5b80212ac1b565aa41af55-Paper-Conference.pdf
+    # code: https://github.com/lytang63/SlotSAM
+    # bibtex: https://bib.yliu.me/MICCAI23.txt
+    image: ./assets/img/NIPS24_1.png
+    
   - title: "Bootstrap Segmentation Foundation Model under Distribution Shift via Object-Centric Learning"
     authors: <strong>Luyao Tang*</strong>, Yuxuan Yuan*, Chaoqi Chen, Kunze Huang, Xinghao Ding, Yue Huang
     conference_short: ECCVW
