--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -1,5 +1,5 @@
 main:
-  - title: "OCRT: Boosting Foundation Models in the Open World with Object-Concept-Relation Triad"
+  - title: "Dissecting Generalized Category Discovery: Multiplex Consensus under Self-Deconstruction"
     authors: <strong>Luyao Tang*</strong>, Kunze Huang*, Chaoqi Chen, Yuxuan Yuan, Chenxin Li, Xiaotong Tu, Xinghao Ding, Yue Huang
     conference_short: ICCV
     conference:  Proceedings of the IEEE/CVF International Conference on Computer Vision <strong>(ICCV)</strong>, 2025.
@@ -16,7 +16,7 @@ main:
     pdf: https://arxiv.org/pdf/2505.14044
     code: https://github.com/lytang63/MTMC
     # bibtex: https://bib.yliu.me/MICCAI23.txt
-    image: ./assets/img/ICCV25_1.png
+    image: ./assets/img/MTMC.png
     notes: under review
     
   - title: "OCRT: Boosting Foundation Models in the Open World with Object-Concept-Relation Triad"
